# NuitsLabo

./: .gitignore  README.md  comment.txt  example.txt  学習記録.csv
.github/: copilot-instructions.md
AesStudy/: AesStudy.sln  AesStudy.sln.DotSettings
AndroidDaggerStudy/: settings.gradle
AngularWithNetCore/: AngularWithNetCore.sln
AopStudy/: AopStudy.sln
ArmTemplateStudy/: Backup-VMToBlobStrage.ps1  Backup-VMToBlobStrageByAzCopy.ps1  Backup-VMToBlobStrageByAzStorageCopy.ps1  Backup-VMToSnapshot.ps1  Copy-VhdToBlobStrage.ps1  New-Snapshot.ps1  Restore-VM.ps1  Restore-VMFromBlobStorage.ps1  Restore-VMFromSnapshot.ps1  Setup-Environments.ps1  test.txt
AspNetStudy/: AspNetStudy.sln
AudioCalibrationStudy/: AudioCalibrationStudy.sln
AzureFunction8Study/: AzureFunction8Study.sln
AzureFunctionsStudy/: AzureFunctionsStudy.sln
Binarization/: Binarization.sln  Binarization.sln.DotSettings
BlazorStudy/: BlazorStudy.sln
BlazorStudy8/: BlazorStudy8.sln
ChannelsStudy/: ChannelsStudy.sln
CompassStudy/: CompassStudy.sln
ComponentOneStudy/: ComponentOneStudy.sln
ConsoleApp1/: ConsoleApp1.sln
ConsoleAppFrameworkStudy/: ConsoleAppFrameworkStudy.sln
ConsoleAppFrameworkV5Study/: ConsoleAppFrameworkV5Study.sln
CountableDataReader/: CountableDataReader.sln  Start-AdventureWorks.ps1  Stop-AdventureWorks.ps1
CsvReader/: CsvReader.sln
DapperStudy/: DapperStudy.sln
SvgToPng/: CLAUDE.md  README.md  pyproject.toml  svg_to_png.py  svg_to_png_browser.py  svg_to_png_fixed.py  svg_to_png_rsvg.py  test_single_browser.py
SvgToPng/.claude/: settings.local.json
(+1868 files in other folders)
